# RESTCore

./: .gitmodules  CMakeLists.txt  Doxyfile  HTTPClient.cpp  HTTPServerHost.cpp  HTTPServerHost.hpp  README.md  main.cpp
.github/workflows/: docs.yml
docs/: OPENAPI_CODEGEN_PLAN.md  index.html
docs/html/: Client_8cpp_source.html  Client_8hpp.html  Client_8hpp.js  Client_8hpp_source.html  Server_8cpp_source.html  Server_8hpp.html  Server_8hpp.js  Server_8hpp_source.html  annotated.html  annotated_dup.js  classRESTCore_1_1Client-members.html  classRESTCore_1_1Client.html  classRESTCore_1_1Client.js  classRESTCore_1_1Server-members.html  classRESTCore_1_1Server.html  classRESTCore_1_1Server.js  classes.html  dir_e89a4332c114cda4f6e7ae45e4ffc7b9.html  dir_e89a4332c114cda4f6e7ae45e4ffc7b9.js  files.html  files_dup.js  functions.html  functions_func.html  functions_type.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js
examples/openapi_echo/: CMakeLists.txt  openapi.yaml  openapi_echo_client.cpp  openapi_echo_server.cpp
examples/openapi_generated/: CMakeLists.txt  openapi.yaml  openapi_generated_client.cpp  openapi_generated_server.cpp
include/RESTCore/: Client.hpp  HTTPClient.hpp  HTTPServerHost.hpp  Server.hpp
src/: Client.cpp  HTTPClient.cpp  HTTPServerHost.cpp  Server.cpp
tests/: http_smoke_test.cpp  openapi_codegen_test.sh
tests/data/: petstore.json  tiny.yaml
tools/: openapi_codegen.cpp
